need aggregationsplugin, apparently